--- a/public/index.html
+++ b/public/index.html
@@ -1,100 +1,199 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thordridge D&D</title>
+    <title>Терновая гряда: Создание персонажа</title>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
             margin: 0;
-            font-family: 'Cinzel', serif; /* Фэнтезийный шрифт */
-            background: url('assets/background.jpg') no-repeat center center fixed;
+            font-family: 'Cinzel', serif;
+            background: url('/assets/background.jpg') no-repeat center center fixed;
             background-size: cover;
-            color: #e0d8c3; /* Светлый текст для тёмного фона */
-            text-align: center;
-            min-height: 100vh;
+            color: #fff;
             display: flex;
-            flex-direction: column;
-            align-items: center;
             justify-content: center;
+            align-items: center;
+            min-height: 100vh;
+        }
+        .container {
+            background: rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            border: 2px solid #d4af37;
+            border-radius: 10px;
+            max-width: 400px;
+            width: 100%;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
         }
         h1 {
-            font-size: 2.5em;
-            text-shadow: 2px 2px 4px #000;
-            color: #d4a017; /* Золотистый заголовок */
+            text-align: center;
+            color: #d4af37;
+            font-size: 24px;
         }
-        .form-container {
-            background: rgba(0, 0, 0, 0.7); /* Полупрозрачный тёмный фон */
-            padding: 20px;
-            border-radius: 10px;
-            border: 2px solid #d4a017;
-            box-shadow: 0 0 15px rgba(0, 0, 0, 0.8);
-            max-width: 400px;
-            width: 90%;
+        label {
+            display: block;
+            margin: 10px 0 5px;
+            color: #d4af37;
         }
         input, select {
             width: 100%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #d4a017;
+            padding: 8px;
+            margin-bottom: 10px;
+            border: 1px solid #d4af37;
             border-radius: 5px;
-            background: #2b2b2b;
-            color: #e0d8c3;
-            font-size: 1em;
+            background: #222;
+            color: #fff;
+            font-family: 'Cinzel', serif;
+        }
+        input[type="number"] {
+            width: 60px;
+        }
+        .stat-group {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
         }
         button {
             width: 100%;
-            padding: 12px;
-            background: #d4a017;
-            color: #1a1a1a;
+            padding: 10px;
+            background: #d4af37;
             border: none;
             border-radius: 5px;
-            font-size: 1.1em;
+            color: #000;
+            font-family: 'Cinzel', serif;
+            font-size: 16px;
             cursor: pointer;
-            transition: background 0.3s;
         }
         button:hover {
-            background: #e6b800;
+            background: #e6c74c;
         }
-        #result {
-            margin-top: 20px;
-            font-size: 1em;
-            color: #e0d8c3;
-        }
-        @media (max-width: 600px) {
-            h1 { font-size: 2em; }
-            .form-container { width: 95%; }
+        #points {
+            text-align: center;
+            color: #d4af37;
+            margin-bottom: 10px;
         }
     </style>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Thordridge D&D</h1>
-    <div class="form-container">
-        <form id="character-form">
-            <input type="text" id="name" placeholder="Character Name" required>
+    <div class="container">
+        <h1>Создание персонажа</h1>
+        <form id="characterForm">
+            <label for="name">Имя персонажа</label>
+            <input type="text" id="name" placeholder="Введите имя" required>
+            
+            <label for="class">Класс</label>
             <select id="class" required>
-                <option value="">Select Class</option>
-                <option value="Warrior">Warrior</option>
-                <option value="Mage">Mage</option>
-                <option value="Rogue">Rogue</option>
+                <option value="" disabled selected>Выберите класс</option>
+                <option value="Воин">Воин</option>
+                <option value="Варвар">Варвар</option>
+                <option value="Монах">Монах</option>
+                <option value="Чародей">Чародей</option>
+                <option value="Друид">Друид</option>
+                <option value="Волшебник">Волшебник</option>
+                <option value="Жрец">Жрец</option>
+                <option value="Паладин">Паладин</option>
+                <option value="Колдун">Колдун</option>
+                <option value="Следопыт">Следопыт</option>
+                <option value="Плут">Плут</option>
             </select>
-            <button type="submit">Create Character</button>
+
+            <label>Характеристики (Осталось очков: <span id="points">15</span>)</label>
+            <div class="stat-group">
+                <label>Сила</label>
+                <input type="number" id="strength" value="8" min="8" max="20" required>
+            </div>
+            <div class="stat-group">
+                <label>Ловкость</label>
+                <input type="number" id="dexterity" value="8" min="8" max="20" required>
+            </div>
+            <div class="stat-group">
+                <label>Телосложение</label>
+                <input type="number" id="constitution" value="8" min="8" max="20" required>
+            </div>
+            <div class="stat-group">
+                <label>Мудрость</label>
+                <input type="number" id="wisdom" value="8" min="8" max="20" required>
+            </div>
+            <div class="stat-group">
+                <label>Интеллект</label>
+                <input type="number" id="intelligence" value="8" min="8" max="20" required>
+            </div>
+            <div class="stat-group">
+                <label>Харизма</label>
+                <input type="number" id="charisma" value="8" min="8" max="20" required>
+            </div>
+
+            <button type="submit">Создать персонажа</button>
         </form>
-        <div id="result"></div>
     </div>
+
     <script>
-        document.getElementById('character-form').addEventListener('submit', async (e) => {
-            e.preventDefault();
-            const name = document.getElementById('name').value;
-            const charClass = document.getElementById('class').value;
-            const response = await fetch('/api/character', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ name, class: charClass })
+        const form = document.getElementById('characterForm');
+        const pointsDisplay = document.getElementById('points');
+        const stats = ['strength', 'dexterity', 'constitution', 'wisdom', 'intelligence', 'charisma'];
+        let availablePoints = 15;
+
+        function updatePoints() {
+            let totalSpent = 0;
+            stats.forEach(stat => {
+                const value = parseInt(document.getElementById(stat).value) || 8;
+                totalSpent += value - 8;
             });
-            const result = await response.json();
-            document.getElementById('result').innerText = JSON.stringify(result);
+            availablePoints = 15 - totalSpent;
+            pointsDisplay.textContent = availablePoints;
+            if (availablePoints < 0) {
+                pointsDisplay.style.color = 'red';
+            } else {
+                pointsDisplay.style.color = '#d4af37';
+            }
+        }
+
+        stats.forEach(stat => {
+            const input = document.getElementById(stat);
+            input.addEventListener('input', () => {
+                let value = parseInt(input.value) || 8;
+                if (value < 8) input.value = 8;
+                if (value > 20) input.value = 20;
+                updatePoints();
+            });
+        });
+
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault();
+            if (availablePoints < 0) {
+                alert('Вы превысили лимит очков характеристик!');
+                return;
+            }
+            if (availablePoints > 0) {
+                alert('Распределите все доступные очки характеристик!');
+                return;
+            }
+
+            const character = {
+                name: document.getElementById('name').value,
+                class: document.getElementById('class').value,
+                stats: {
+                    strength: parseInt(document.getElementById('strength').value),
+                    dexterity: parseInt(document.getElementById('dexterity').value),
+                    constitution: parseInt(document.getElementById('constitution').value),
+                    wisdom: parseInt(document.getElementById('wisdom').value),
+                    intelligence: parseInt(document.getElementById('intelligence').value),
+                    charisma: parseInt(document.getElementById('charisma').value)
+                }
+            };
+
+            try {
+                const response = await fetch('/api/character', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(character)
+                });
+                const result = await response.json();
+                alert(result.message);
+            } catch (error) {
+                alert('Ошибка при создании персонажа: ' + error.message);
+            }
         });
     </script>
 </body>
