--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: 'Cinzel', serif;
-            background-image: url('background.jpg');
+            background-image: url('/assets/background.jpg') no-repeat center center fixed;
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
